Opened 12 months ago
Closed 10 months ago
#11597 closed defect (fixed)
FFmpeg output is stuck if using split with fps filter
| Reported by: | TheTroll | Owned by: | |
|---|---|---|---|
| Priority: | important | Component: | avfilter |
| Version: | git-master | Keywords: | split thumbnail |
| Cc: | TheTroll | Blocked By: | |
| Blocking: | Reproduced by developer: | no | |
| Analyzed by developer: | no |
Description (last modified by )
Summary of the bug:
How to reproduce:
% ffmpeg -re -y -i INPUT -filter_complex "[0:v]split=2[o0][sthumb];[sthumb]fps=1/60[othumb]" -an -c:v libx264 -map [o0] out.ts -map [othumb] -update 1 out.png
Built on master
When trying to transcode an input live stream while extracting thumbnails (every minute in this example), using the split and fps filters, FFmpeg gets blocked and eventually generates the output after a while, by bursts.
The following warning indicates that something is wrong:
[out_#0:0 @ 0x7f1018013c00] 100 buffers queued in out_#0:0, something may be wrong.
FFmpeg 5.1.2 works fine and as expected.
Thanks
Change History (6)
comment:1 by , 12 months ago
| Description: | modified (diff) |
|---|
comment:2 by , 12 months ago
comment:3 by , 12 months ago
Hi,
Because to make a quick test, you can use any source file and use -re to make it act as a live stream.
You can obtain the same issue removing -re and using a live URl as input.
thanks
comment:4 by , 12 months ago
What about
ffmpeg -y -i LIVE_INPUT -an -c:v libx264 -map 0:v out.ts -map 0:v -filter:v "fps=1/60" -update 1 out.png
comment:5 by , 12 months ago
OMG that helped! Thanks for the trick.
That's a good one, I wonder why the split thing doesnt work anymore though?
comment:6 by , 10 months ago
| Resolution: | → fixed |
|---|---|
| Status: | new → closed |
Fixed in 42bcbdd456d1ca2aa2d0665840830f0a5bf8be39.



Why the
-refor a live stream?